tests/fixtures/invalid/min_set_str.py
# Cannot call min() with Set[int], Str
x = min({1, 2, 3}, "hello")
